--- a/Demeter/package.json
+++ b/Demeter/package.json
@@ -10,13 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "1.5.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "7.45.4",
-    "react-router-dom": "6.15.0"
-  },
-  "devDependencies": {
+    "@mui/icons-material": "5.14.8",
+    "@mui/material": "5.14.8",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "@vitejs/plugin-react": "4.0.3",
@@ -27,6 +22,11 @@
     "eslint-plugin-react-refresh": "0.4.3",
     "postcss": "8.4.29",
     "tailwindcss": "3.3.3",
-    "vite": "4.4.5"
+    "vite": "4.4.5",
+    "axios": "1.5.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "7.45.4",
+    "react-router-dom": "6.15.0"
   }
 }
