--- a/Demeter/package.json
+++ b/Demeter/package.json
@@ -10,23 +10,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "11.11.1",
+    "@emotion/styled": "11.11.0",
     "@mui/icons-material": "5.14.8",
     "@mui/material": "5.14.8",
-    "@types/react": "18.2.15",
-    "@types/react-dom": "18.2.7",
-    "@vitejs/plugin-react": "4.0.3",
-    "autoprefixer": "10.4.15",
-    "eslint": "8.45.0",
-    "eslint-plugin-react": "7.32.2",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-react-refresh": "0.4.3",
-    "postcss": "8.4.29",
-    "tailwindcss": "3.3.3",
-    "vite": "4.4.5",
     "axios": "1.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.45.4",
-    "react-router-dom": "6.15.0"
+    "react-icons": "^4.11.0",
+    "react-router-dom": "6.15.0",
+    "react-select": "5.7.7"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.3",
+    "vite": "4.4.5",
+    "postcss": "8.4.29",
+    "eslint": "8.45.0",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.3",
+    "autoprefixer": "10.4.15",
+    "@types/react": "18.2.15",
+    "@types/react-dom": "18.2.7",
+    "@vitejs/plugin-react": "4.0.3"
   }
 }
